--- a/.github/workflows/oopsies.yml
+++ b/.github/workflows/oopsies.yml
@@ -15,4 +15,4 @@ jobs:
           sudo curl -o /usr/local/bin/gomplate -sSL https://github.com/hairyhenderson/gomplate/releases/download/v3.9.0/gomplate_linux-amd64
           sudo chmod +x /usr/local/bin/gomplate
       - run: |
-          gomplate
+          gomplate --verbose
